--- a/Css/style.css
+++ b/Css/style.css
@@ -22,8 +22,17 @@ nav{
     position: absolute;
     right: 0;
     width: 400px;
-    height: 93%;
+    height: 94%;
     border: 1px solid black;
     background-color: antiquewhite;
 
+}
+.divCard{
+    width: 300px;
+    height: 250px;
+    border: 1px solid black;
+}
+img{
+    width: 300px;
+    height: auto;
 }
